examples/test/testpolicy15183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15183
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key3: value25
      key4: value44
      key2: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value36
      podSelector:
        matchLabels:
          key39: value49
          key29: value28
